--- a/package.json
+++ b/package.json
@@ -15,20 +15,27 @@
     "babel-eslint": "^7.1.1",
     "eslint": "^3.17.0",
     "eslint-plugin-react": "^6.10.0",
+    "gsap": "^1.19.1",
     "normalize-css": "^2.3.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "next"
+    "react-router-dom": "next",
+    "superb": "^1.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.6",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-2": "6.13.0",
     "css-loader": "0.23.1",
     "image-webpack-loader": "^3.2.0",
+    "json-loader": "^0.5.4",
     "postcss-loader": "0.9.1",
+    "postcss-scss": "^0.4.1",
+    "precss": "^1.4.0",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "0.13.1",
     "webpack": "2.1.0-beta.25",
