--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^1.19.1",
     "normalize-css": "^2.3.1",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router-dom": "next",
     "superb": "^1.3.0"
