minor changes in webpack and add pro page

--- a/package.json
+++ b/package.json
@@ -9,30 +9,35 @@
   "scripts": {
     "start": "webpack-dev-server",
     "lint": "eslint src",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.production.js"
+    "prebuild": "rimraf dist",
+    "build": "NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "postbuild": "copyfiles index.html dist"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
     "classnames": "^2.2.5",
-    "eslint": "^3.17.0",
-    "eslint-plugin-react": "^6.10.0",
+    "copyfiles": "^1.2.0",
     "gsap": "^1.19.1",
     "normalize-css": "^2.3.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router-dom": "next",
+    "rimraf": "^2.6.1",
     "superb": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.6",
     "babel-core": "6.13.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "6.2.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-2": "6.13.0",
+    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "0.23.1",
+    "eslint": "^3.17.1",
+    "eslint-plugin-react": "^6.10.0",
     "image-webpack-loader": "^3.2.0",
     "json-loader": "^0.5.4",
     "postcss-loader": "0.9.1",
